--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="welcomeSection full-image text-center">
     <img src="img/welIMG.jpg" alt="..." />
     <div class="row">
-      <div class="content text-center col-md-12">
+      <div class="content text-center col-md-12 col-sm-12">
         <h1>Creative Tim</h1>
         <h3>Awesome Bootstrap freebies and templates to build better websites</h3>
       </div>
@@ -84,8 +84,8 @@
             <form class="navbar-form navbar-left">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search" id="searchInput">
+                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
               </div>
-              <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
             </form><!-- end navbar-form -->
 
             <ul class="nav navbar-nav navbar-right">
@@ -241,7 +241,7 @@
         </div>
         <div class="row">
           <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4 col-xs-4">
               <div class="card add-animation">
                 <img alt="..." src="img/pic10.jpg">
               </div>
@@ -249,7 +249,7 @@
                 <img alt="..." src="img/pic6.jpg">
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4 col-xs-4">
               <div class="card add-animation">
                 <img alt="..." src="img/pic11.jpg">
               </div>
@@ -260,7 +260,7 @@
                 <img alt="..." src="img/pic9.jpg">
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-4 col-xs-4">
               <div class="card add-animation">
                 <img alt="..." src="img/pic2.jpg">
               </div>
