--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   <div class="welcomeSection full-image text-center">
     <img src="img/welIMG.jpg" alt="..." />
     <div class="row">
-      <div class="content text-center col-md-12">
+      <div class="content text-center col-md-12 col-sm-12">
         <h1>Creative Tim</h1>
         <h3>Awesome Bootstrap freebies and templates to build better websites</h3>
       </div>
@@ -49,7 +49,7 @@
           <!-- Nav bar list -->
           <div class="collapse navbar-collapse" id="mynavbar">
             <ul class="nav navbar-nav">
-              <li class="active">
+              <li>
                 <a href="index.html">Home</a>
               </li>
               <li class="dropdown">
@@ -58,7 +58,7 @@
                   <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li>
+                  <li class="active">
                     <a href="portfolio.html">Web Design</a>
                   </li>
                   <li>
@@ -84,8 +84,8 @@
             <form class="navbar-form navbar-left">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search" id="searchInput">
+                <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
               </div>
-              <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
             </form><!-- end navbar-form -->
 
             <ul class="nav navbar-nav navbar-right">
